fix(oas3-declaration): corrected methods names to meet the operation id uniqueness requirement
