# src/controller/authenticationController.ts
@@ -13,7 +13,7 @@ export class AuthenticationController {
     @inject(TYPES.AppConfig) private readonly appConfig: AppConfig
   ) {}
 
-  public async post(request: Request, response: Response) {
+  public async authenticationPost(request: Request, response: Response) {
     // TODO: Add request body validation
     // TODO: Refactor in favor of strategy pattern usage
     const agent = await this.agentFactory.create()
